popup width on mobile fixed

--- a/styles/__adaptive.scss
+++ b/styles/__adaptive.scss
@@ -393,6 +393,15 @@
         }
     }
 
+    .services {
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+
+    .feedback {
+        margin-bottom: 100px;
+    }
+
 
 }
 
@@ -452,8 +461,17 @@
         max-width: 570px;
     }
 
-    html, body {
-        //font-size: 12px;
+    .header__navigation {
+        height: 50px;
+    }
+
+    .header__ul_visible {
+        top: 50px;
+    }
+
+    .header__logo-image {
+        width: 40px;
+        height: auto;
     }
 
     .header__info_h2 {
@@ -466,10 +484,7 @@
         }
     }
 
-    .header__icons {
-        //flex-direction: column;
-        //width: 40%;
-    }
+
 
     .header__figure {
         margin-bottom: 20px;
@@ -529,6 +544,10 @@
 
     .service {
         width: 100%;
+        margin-bottom: 45px;
+    }
+    .service__icon {
+        margin-bottom: 0;
     }
 
     .item__description {
@@ -555,6 +574,14 @@
     .contacts__map, .contacts__questions {
         width: 100%;
     }
+
+    .heading__secondary {
+        line-height: 50px;
+    }
+
+    .modal__content {
+        width: 85vw;
+    }
 }
 
 
@@ -563,7 +590,6 @@
         font-size: 2.75rem;
     }
 }
-//todo высоту линий у заголовков основных h2 проверить при адаптиве, когда раскладываются на две строчки
 
 //todo высоту верхнего меню учитывать в мобильной версии по кликам на ссылку (чтобы после скролла до нужного блока заголовок показывался)
 
